--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [project]
-name = "second-kursovoy-saa"
+name = "third-kursovoy-saa"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Александр Садовский",email = "sadovskiyaa@list.ru"}
+    {name = "SadovskiyAA"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 
